# tern

./: .dir-locals.el  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  Makefile.toml  README.md  default.nix  docker-compose.yaml  flake.nix  rustfmt.toml  taplo.toml
.github/workflows/: cache.yaml  dev.yaml  main.yaml  pr.yaml
crates/tern-cli/: Cargo.toml
crates/tern-cli/src/: history.rs  lib.rs  migrate.rs  source.rs
crates/tern-core/: Cargo.toml
crates/tern-core/src/: context.rs  error.rs  executor.rs  lib.rs  migration.rs
crates/tern-core/src/migrate/: mod.rs  ops.rs
crates/tern-core/src/migration/: iter.rs  mod.rs  query.rs  resolve.rs  split.rs  types.rs
crates/tern-derive/: Cargo.toml
crates/tern-derive/src/: lib.rs  migration.rs  tern_migrate.rs
crates/tern-derive/src/internal/: ast.rs  mod.rs  source_file.rs  source_mods.rs
crates/tern-executor/: Cargo.toml
crates/tern-executor/src/impls/: mod.rs
crates/tern-executor/src/impls/sqlx/: any.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/tern-executor/src/query/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
derrick-backends/: Cargo.toml
derrick-backends/src/: runner.rs
derrick-backends/src/backends/sqlx/: postgres.rs
derrick-backends/src/migrate/: pg.rs
derrick-core/: Cargo.toml
derrick-core/src/: error.rs  lib.rs
derrick-core/src/migrations/: connection.rs  history.rs  migrate.rs  migration.rs  mod.rs  source.rs
derrick-derive/: Cargo.toml
derrick-derive/src/: derive.rs  embed_migrations.rs  embedding.rs  lib.rs  mangle.rs  parse.rs  query_builder.rs  runtime.rs
derrick-macros/: Cargo.toml
derrick-macros/src/: lib.rs
derrick-migrate/: Cargo.toml
derrick-migrate-cli/: Cargo.toml
derrick-migrate-cli/src/: lib.rs  migrate.rs  opt.rs
derrick-migrate/src/: lib.rs  report.rs  runner.rs
derrick-migrate/src/backends/sqlx/: postgres.rs
derrick-migrate/src/migrate/: mod.rs  pg.rs  validate.rs
etc/: postgres16.Dockerfile
examples/: Cargo.toml  README.md  docker-compose.yaml  dynamic-query.rs  examples.toml  simple.rs
examples/custom-context/: Cargo.toml  build.rs
examples/custom-context/src/: lib.rs  main.rs  migrations.rs
examples/custom-context/src/migrations/: V1__create_table_dmd_test.sql  V2__insert_env_value.rs
examples/dynamic/: mod.rs
examples/index-partitioned-table-concurrently/: Cargo.toml  README.md
examples/index-partitioned-table-concurrently/src/: main.rs  migrations.rs
examples/index-partitioned-table-concurrently/src/migrations/: V1__init.sql  V2__create_partitioned_table.sql  V3__create_name_email_idx_concurrently.rs
examples/partitioned/: Cargo.toml  README.md
examples/partitioned/src/: lib.rs  main.rs  migrations.rs
examples/partitioned/src/migrations/: V2__create_partitioned_table.sql
examples/pg-envvar-query/: Cargo.toml
examples/pg-envvar-query/src/: lib.rs  main.rs  migrations.rs
examples/pg-envvar-query/src/migrations/: V1__create_table_dmd_test.sql  V2__insert_env_value.rs
examples/simple/: mod.rs
examples/simple/migrations/: V2__insert_env_value.rs  V3__create_dmd_test_y_idx.sql
examples/simple_lib/: mod.rs
examples/simple_lib/migrations/: V1__create_table_simple_example.sql  V2__insert_env_value.rs  V3__create_simple_example_y_idx.sql
examples/src/: lib.rs  main.rs  migrations.rs
examples/src/migrations/: V1729983909__create_table_dmd_test.sql  V1729984052__unimplemented.rs  V1729984301__create_dmd_test_y_idx.sql
nix/: actions.nix  checks.nix  crate.nix  default.nix  lib.nix  packages.nix  shells.nix  tern.nix  treefmt.nix
nix/checks/: default.nix
nix/ci/: default.nix
src/: app.rs  executor.rs  lib.rs  migrate.rs  report.rs
src/app/: cli_opts.rs  mod.rs  report.rs  validate.rs
src/extras/: cli.rs  mod.rs
src/migration/: migration_set.rs  mod.rs  resolve.rs
src/operation/: history.rs  migrate.rs  mod.rs  source.rs
src/ops/: history.rs  migrate.rs  mod.rs  source.rs
src/report/: mod.rs
tern/: Cargo.toml
tern-cli/: Cargo.toml
tern-cli/src/: cli.rs  commands.rs  lib.rs
tern-core/: Cargo.toml
tern-core/src/: context.rs  error.rs  executor.rs  lib.rs  migration.rs  query.rs  runner.rs
tern-core/src/backend/: mod.rs
tern-core/src/backend/sqlx_backend/: mod.rs  mysql.rs  pool.rs  postgres.rs  sqlite.rs
tern-core/src/context/: executor.rs  mod.rs
tern-core/src/executor/: mod.rs
tern-core/src/executor/sqlx_backend/: mod.rs  mysql.rs  pool.rs  postgres.rs  sqlite.rs
tern-core/src/executor/sqlx_pool/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
tern-core/src/query/: mod.rs  split.rs
tern-core/src/source/: migration.rs  mod.rs  query.rs
tern-derive/: Cargo.toml
tern-derive/src/: lib.rs  tern_migrate.rs
tern-derive/src/internal/: ast.rs  parse.rs  source_file.rs
tern-derive/src/quote/: migration.rs  migration_context.rs  migration_source.rs  mod.rs
tern-executor/: Cargo.toml
tern-executor/src/: lib.rs
tern-executor/src/impls/sqlx/: any.rs
tern-executor/src/sqlx_executor/: mod.rs  mysql.rs  pool.rs  postgres.rs  sqlite.rs
tests/migrations/: mod.rs
tests/migrations/migrations01/: V1__init.sql  V2__create_idx.sql
tests/postgres/: postgres.rs  runner.rs
tests/postgres/migrations/: V1__init.sql  V2__create_username_idx.sql  V3__alter_users_add_alias.sql  V4__test_cleanup.rs  mod.rs
