[workspace]
members = [".", "tern-core", "tern-cli", "tern-derive", "tern-executor"]
default-members = ["."]
exclude = []

[workspace.package]
version = "4.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/quasi-coherent/tern"
authors = ["Daniel Donohue <d.michael.donohue@gmail.com>"]
keywords = ["database", "migrations", "postgres", "mysql", "sqlite"]
categories = ["database"]

[package]
name = "tern"
readme = "README.md"
description = "Embedded database migrations in SQL or Rust."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

cli = ["tern-cli"]

sqlx_mysql = ["tern-executor/sqlx_mysql"]
sqlx_postgres = ["tern-executor/sqlx_postgres"]
sqlx_sqlite = ["tern-executor/sqlx_sqlite"]

[dependencies]
tern-core = { workspace = true }
tern-cli = { workspace = true, optional = true }
tern-derive = { workspace = true }
tern-executor = { workspace = true }

chrono = { workspace = true }
display_json = "0.2.1"
futures-core = { workspace = true }
log = { workspace = true, features = ["kv"] }
serde = { workspace = true }
serde_json = "1.0"

[workspace.dependencies]
tern = { version = "=4.0.0", path = "." }
tern-core = { version = "=4.0.0", path = "tern-core" }
tern-cli = { version = "=4.0.0", path = "tern-cli" }
tern-derive = { version = "=4.0.0", path = "tern-derive" }
tern-executor = { version = "=4.0.0", path = "tern-executor" }

chrono = { version = "0.4.44", features = ["serde"] }
futures-core = "0.3.32"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[workspace.dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["chrono", "derive"]

[dev-dependencies]
env_logger = "0.11.10"
thiserror = { workspace = true }

[dev-dependencies.tokio]
version = "1.0"
default-features = false
features = ["macros", "rt", "rt-multi-thread"]

[[example]]
name = "simple"
required-features = ["sqlx_postgres"]

[[test]]
name = "derive"
required-features = ["sqlx_postgres"]
