[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "4.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/quasi-coherent/tern"
authors = ["Daniel Donohue <d.michael.donohue@gmail.com>"]
keywords = ["database", "migrations", "postgres", "mysql", "sqlite"]
categories = ["database"]

[workspace.metadata.crane]
name = "tern"

[package]
name = "tern"
readme = "README.md"
description = "Embedded database migrations in SQL or Rust."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

cli = ["tern-cli"]

sqlx_mysql = ["tern-executor/sqlx_mysql"]
sqlx_postgres = ["tern-executor/sqlx_postgres"]
sqlx_sqlite = ["tern-executor/sqlx_sqlite"]

[dependencies]
tern-cli = { workspace = true, optional = true }
tern-core = { workspace = true }
tern-derive = { workspace = true }
tern-executor = { workspace = true }

chrono = { workspace = true }
display_json = { workspace = true }
futures-core = { workspace = true }
log = { workspace = true, features = ["kv"] }
serde = { workspace = true }
serde_json = { workspace = true }

[workspace.dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
console = "0.16.3"
display_json = "0.2.1"
futures-core = "0.3.32"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

tern-cli = { version = "=4.0.0", path = "crates/tern-cli" }
tern-core = { version = "=4.0.0", path = "crates/tern-core" }
tern-derive = { version = "=4.0.0", path = "crates/tern-derive" }
tern-executor = { version = "=4.0.0", path = "crates/tern-executor" }

[workspace.dependencies.sqlx]
default-features = false
features = ["chrono", "derive"]
version = "0.8.6"

[dev-dependencies]
env_logger = "0.11.10"
thiserror = { workspace = true }

[dev-dependencies.tokio]
version = "1.0"
default-features = false
features = ["macros", "rt", "rt-multi-thread"]

[[example]]
name = "simple"
required-features = ["sqlx_postgres"]

[[test]]
name = "derive"
required-features = ["sqlx_postgres"]
