[package]
name = "derrick-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.30", default-features = false }
futures-core = "0.3.25"
futures-util = "0.3.25"
sha2 = { version = "0.10", default-features = false }
sqlx = "0.7"
thiserror = "1.0"
url = { version = "2.5", default-features = false }