[package]
name = "derrick-migrate-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
derrick-core.workspace = true
derrick-migrate.workspace = true
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
regex = "1.10.0"
