[package]
name = "tern-cli"
description = "A CLI for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.38", features = ["derive", "env"] }
console = "0.15.11"
tern-core.workspace = true
log = "0.4.27"
regex = "1.11.1"