[package]
name = "tern-cli"
description = "A CLI for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
futures-core = "0.3.31"
tern-core.workspace = true