[package]
name = "tern-cli"
description = "A CLI for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
console = "0.16.3"
tern-core = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
