[package]
name = "tern-core"
description = "Core interfaces and types for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern_core"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

sqlx_postgres = ["sqlx", "sqlx/chrono", "sqlx/postgres"]
sqlx_mysql = ["sqlx", "sqlx/chrono", "sqlx/mysql"]
sqlx_sqlite = ["sqlx", "sqlx/chrono", "sqlx/sqlite"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
display_json = "0.2.1"
futures-core = "0.3.31"
log = { workspace = true }
regex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, optional = true }
thiserror = "2.0.18"
