[package]
name = "tern-core"
description = "Core interfaces and types for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern_core"
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]

sqlx = ["dep:sqlx", "sqlx/chrono", "sqlx/derive"]
sqlx_mysql = ["sqlx", "sqlx/mysql"]
sqlx_postgres = ["sqlx", "sqlx/postgres"]
sqlx_sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
chrono = { workspace = true }
futures-core = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
sqlx = { workspace = true, optional = true }
sql-splitter = "1.13.1"
thiserror = { workspace = true }
