[package]
name = "tern-core"
description = "Core interfaces and types for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern_core"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

sqlx = ["dep:sqlx", "sqlx/chrono", "sqlx/derive"]
sqlx_postgres = ["sqlx", "sqlx/postgres"]
sqlx_mysql = ["sqlx", "sqlx/mysql"]
sqlx_sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
display_json = "0.2.1"
futures-core = "0.3.31"
log = { workspace = true }
regex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { workspace = true, optional = true }
sql-splitter = "1.13.1"
thiserror = "2.0.18"
