[package]
name = "tern-derive"
description = "Derive macros for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11"
syn = "2.0"