[package]
name = "tern-executor"
description = "Implementations for `tern` for foreign types."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern_executor"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

sqlx = ["dep:sqlx", "sqlx/chrono", "tern-core/sqlx"]
sqlx_postgres = ["sqlx", "sqlx/postgres"]
sqlx_mysql = ["sqlx", "sqlx/mysql"]
sqlx_sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
chrono = { workspace = true }
futures-core = { workspace = true }
sqlx = { workspace = true, default-features = false, optional = true }
tern-core = { workspace = true }
