[package]
name = "tern"
readme = "README.md"
description = "Embedded database migrations in SQL or Rust."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

cli = ["tern-cli"]

sqlx_mysql = ["tern-executor/sqlx_mysql"]
sqlx_postgres = ["tern-executor/sqlx_postgres"]
sqlx_sqlite = ["tern-executor/sqlx_sqlite"]

[dependencies]
tern-cli = { version = "=4.0.0", path = "../tern-cli", optional = true }
tern-core = { version = "=4.0.0", path = "../tern-core" }
tern-derive = { version = "=4.0.0", path = "../tern-derive" }
tern-executor = { version = "=4.0.0", path = "../tern-executor" }

chrono = { workspace = true }
display_json = { workspace = true }
futures-core = { workspace = true }
log = { workspace = true, features = ["kv"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
env_logger = "0.11.10"
thiserror = { workspace = true }

[dev-dependencies.tokio]
version = "1.0"
default-features = false
features = ["macros", "rt", "rt-multi-thread"]

[[example]]
name = "simple"
required-features = ["sqlx_postgres"]

[[test]]
name = "derive"
required-features = ["sqlx_postgres"]
