[package]
name = "tern-derive"
description = "Derive macros for `tern` migration tooling."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tern_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
regex = { workspace = true }
syn = "2.0"
