[package]
name = "index-partitioned-table-concurrently"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
anyhow = "1.0"
tern = { path = "../..", features = ["cli", "sqlx_postgres"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }