[package]
name = "pg-envvar-query"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pg-envvar-query"
path = "src/main.rs"

[dependencies]
derrick = { version = "1.0.0-rc1", path = "../.." }
env_logger = "0.11"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }